# 381706-2_savosina_lab1

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  lab2-matrix.sln  lab4-queue.sln  otchot2_matrix.doc  О.arrlist.doc  О.list.doc  О.multistack.doc  О.polynom.doc  О.queue.doc  О.stack.doc  О.stacklist.doc  О.tablehash.doc  О.tablesee.doc  Отчёт[2].векторы.doc
Matrix/: sample_matrix.cpp
Plex/: CMakeLists.txt  Plex_main.cpp
Queue/: queue_main.cpp
Set/: CMakeLists.txt
Stack/: CMakeLists.txt  Stack_main.cpp
Stacklist/: CMakeLists.txt  main.cpp
Tables/: CMakeLists.txt  Tables_main.cpp
arithmetics/: CMakeLists.txt  Stack.h  stack_main.cpp
arithmetics_test/: CMakeLists.txt
arrlistlib/: arrlist.h
arrlisttest/: ArrlistTest.cpp
base/: Stack.h  base.vcxproj
base_test/: base_test.vcxproj
gtest/: gtest.h
gtest/Debug/: gtest.lib
include/: CMakeLists.txt  utmatrix.cpp
lab1/base_test/: CMakeLists.txt  base_test.vcxproj
lab2/base_test/: base_test.vcxproj
lab3/base/: stack_main.cpp
list/: CMakeLists.txt  list.cpp  list.h  main.cpp
list_lib/: list.h
list_test/: CMakeLists.txt
listlib/: List.cpp  List.h
listtest/: ListTest.cpp
matrix/: CMakeLists.txt  sample_matrix.cpp  stack_main.cpp
matrix_lib/: utmatrix.h
matrix_test/: CMakeLists.txt
matrixlib/: utmatrix.h
mtest/: CMakeLists.txt
multystack/: MStack.h  base.vcxproj  stack_main.cpp
multystack_lib/: MStack.h
multystack_test/: base_test.vcxproj  test_stack.cpp
plexlib/: CMakeLists.txt  TPlex.h  TPoint.h
plextest/: CMakeLists.txt  PlexTest.cpp
queue/: CMakeLists.txt  Queue.h  base.vcxproj  queue_main.cpp
queue_lib/: CMakeLists.txt
queue_test/: CMakeLists.txt  base_test.vcxproj  test_queue.cpp
queuelib/: Queue.h
samples/: CMakeLists.txt  sample_matrix.cpp
set/: CMakeLists.txt
set_test/: CMakeLists.txt
setlib/: CMakeLists.txt  tbitfield.h
sln/: lab1-set.sln
sln/projects/: lab3-stack.vcxproj
sln/vc17/Debug/: gtest.idb  sample_utmatrix.ilk  test_utmatrix.ilk  vc141.idb
sln/vc17/Debug/gtest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
sln/vc17/Debug/sample_utmatrix.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
sln/vc17/Debug/test_utmatrix.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  test_utmatrix.lastbuildstate
sorttablelib/: TElem.h  TPlex.h  TTableHash.h  TTableSort.h  TTree.h  main.cpp
src/: stack_main.cpp  utmatrix.h
stack/: CMakeLists.txt  Stack.h  base.vcxproj  stack_main.cpp
stack_test/: CMakeLists.txt  base_test.vcxproj  test_stack.cpp
stacklib/: CMakeLists.txt  Stack.cpp  Stack.h
stacklist/: main.cpp  stacklist.cpp  stacklist.h
stacklist_test/: CMakeLists.txt
stacklistlib/: CMakeLists.txt  stacklist.cpp  stacklist.h
stacklisttest/: CMakeLists.txt
stacktest/: CMakeLists.txt
tableslib/: TElem.h  TTableHash.h  TTableSee.h  TTableSort.h
tablestest/: TableHashTest.cpp  TableSeeTest.cpp  TableSortTest.cpp
test/: CMakeLists.txt
testset/: CMakeLists.txt
vector/: CMakeLists.txt  main.cpp
vectorlib/: CMakeLists.txt  main.cpp
